[package]
name = "commit-fix"
version = "0.2.0"
edition = "2021"
description = "Stashless commit-time auto-fix for Rust (fmt, opt-in clippy --fix, lockfile freshening), safe with concurrent writers in one working tree."
license = "MIT"
repository = "https://github.com/tylerlaprade/lint-staged-rs"
keywords = ["git", "hooks", "lint", "format", "pre-commit"]
categories = ["development-tools"]
readme = "README.md"

[[bin]]
name = "commit-fix"
path = "src/main.rs"

[dependencies]
rustfix = "0.9.7"
serde_json = "1.0.151"
